--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "qpick",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://IldarGH02.github.io/QPICK",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -16,7 +17,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -39,6 +42,7 @@
   "devDependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
+    "gh-pages": "^5.0.0",
     "react-icon": "^1.0.0",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
